--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "rebuild": "electron-rebuild",
     "test": "echo \"Error: no test specified\" && exit 1",
     "package": "electron-forge package",
-    "make": "electron-forge make",
-    "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "make": "electron-forge make"
   },
   "keywords": [],
   "author": "luodog",
@@ -36,8 +34,10 @@
     "autoprefixer": "^10.4.14",
     "electron": "^24.1.2",
     "electron-builder": "^23.6.0",
+    "electron-packager": "^17.1.1",
     "electron-rebuild": "^3.2.9",
     "electron-reloader": "^1.2.3",
+    "electron-winstaller": "^5.1.0",
     "postcss": "^8.4.23",
     "postcss-loader": "^7.2.4",
     "tailwindcss": "^3.3.1"
